# emojify

./: .gitignore  Cargo.toml  README.md
src/: config.rs  emojify.rs  main-camera.rs  main.rs  rgb2emoji.rs
src/fonttool/: main.rs
